<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:paddingTop="30dp">
                    <EditText
                        android:id="@+id/edit1"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:inputType="text"
                        android:hint="@string/hint_username" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/edit2"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password" />
                </android.support.design.widget.TextInputLayout>


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_login"
                        android:layout_marginTop="24dp"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/TV_link_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_link_signup"
                        android:layout_marginTop="23dp"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/white"
                        android:layout_below="@id/btn_login"/>


            </LinearLayout>

        </LinearLayout>